# sbu-cse328-hw1

./: CMakeLists.txt  README.md  imgui.ini
assets/shaders/: basic.frag
include/: app.h  renderer.h  scene.h
include/gl/: gl_object.h  glsl_object.h  uniform.h  vertex_layout.h
include/gl/component/: uniform_macros.h
include/input/: input_handler.h
src/: app.cpp  main.cpp  renderer.cpp  scene.cpp  scene_basic_impl.cpp  scene_bonus_impl.cpp
src/input/: input_handler.cpp
